вносит правки в разметку

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 
   <body>
     <header class="main-header">
+      <img src="logo" alt="Логотип Седоны">
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link navigation-link-current" href="index.html">Главная</a>
+            <a class="navigation-link navigation-link-current">Главная</a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">О Седоне</a>
@@ -37,7 +38,6 @@
             </li>
             <li class="navigation-item">
               <a class="navigation-link" href="#">
-                <span class="visually-hidden">
                   Хочу сюда!
                 </span>
               </a>
@@ -47,80 +47,80 @@
     </header>
 
     <main class="main-index">
-      <h1 class="visually-hidden"> Город СЕДОНА</h1>
-      <img class="logo" src="#" alt="photo-Sedona">
+      <h1 class="visually-hidden">Город СЕДОНА</h1>
+      <img class="welcom to Sedona" src="#" alt="Добро пожаловать в Седону">
       <section class="description">
-        <h2>СЕДОНА - НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ, <br> ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО!</h2>
-        <P>Рассмотрим причины, по которым Седона круче, чем Гранд-каньон!</P>
+        <h2>СЕДОНА - НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ, ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО!</h2>
+        <p>Рассмотрим причины, по которым Седона круче, чем Гранд-каньон!</p>
       </section>
       <section class="advantages">
         <h2 class="visually-hidden">Приемущества</h2>
         <ul class="advantages-list">
           <li class="advantages-item">
-            <h3 class="advantages-title">НАСТОЯЩИЙ <br> ГОРОДОК</h3>
-            <p class="advantages-description">Седона - не аттракцион для <br> туристов, там течет своя <br> жизнь</p>
+            <h3 class="advantages-title">НАСТОЯЩИЙ ГОРОДОК</h3>
+            <p class="advantages-description">Седона - не аттракцион для туристов, там течет своя жизнь</p>
             <img src="#" alt="photo">
           </li>
           <li class="advantages-item">
-            <h3 class="advantages-title">НЕБОЛЬШАЯ <br> ПЛОЩАДЬ</h3>
-            <p class="advantages-description">Все достопримичательности <br> находятся очень близко</p>
+            <h3 class="advantages-title">НЕБОЛЬШАЯ ПЛОЩАДЬ</h3>
+            <p class="advantages-description">Все достопримичательности находятся очень близко</p>
           </li>
           <li class="advantages-item">
-            <h3 class="advantages-title">КРАСИВАЯ <br> ДОРОГА</h3>
-            <p class="advantages-description">Ехать в Седону из Лас-Вегаса <br> совсем не скучно!</p>
+            <h3 class="advantages-title">КРАСИВАЯ ДОРОГА</h3>
+            <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
           <li class="advantages-item">
-            <h3 class="advantages-title">МАЛО <br> ТУРИСТОВ</h3>
-            <p class="advantages-description">Большинство едет в Гранд Гранд<br> Каньон и толпится там</p>
+            <h3 class="advantages-title">МАЛО ТУРИСТОВ</h3>
+            <p class="advantages-description">Большинство едет в Гранд Гранд Каньон и толпится там</p>
           </li>
           <li class="advantages-item">
-            <h3 class="advantages-title">ТАМ ЕСТЬ<br> МОСТ ДЬЯВОЛА</h3>
-            <p class="advantages-description">Да, по нему можно проити!<br> Если вы осмелитесь,<br> разумеется</p>
-            <img src="#" alt="bridge">
+            <h3 class="advantages-title">ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</h3>
+            <p class="advantages-description">Да, по нему можно проити! Если вы осмелитесь, разумеется</p>
+            <img src="#" alt="Мост Дьявол">
           </li>
         </ul>
       </section>
       <section class="rest">
-        <h2>ПРИЕЗЖАЙТЕ В СЕДОНУ ОТДОХНУТЬ<br>В КОМФОРТЕ И УЮТЕ!</h2>
+        <h2>ПРИЕЗЖАЙТЕ В СЕДОНУ ОТДОХНУТЬ В КОМФОРТЕ И УЮТЕ!</h2>
         <p>Опытный персонал и качественное обслуживание!</p>
       </section>
       <section class="services">
-        <ul class="services-list">
+        <ul class="services-list services-item">
           <li class="residence">ЖИЛЬЁ
-          <p>Рекомендуем пожить<br> в настоящем мотеле,<br> всё как в кино</p>
+            <p>Рекомендуем пожить в настоящем мотеле, всё как в кино</p>
           </li>
           <li class="food">ЕДА
-            <p>Всегда заказывайте<br> топовый фирменный бургер,<br> вы не разочаруетесь!</p>
-            </li>
-            <li class="presents">СУВЕНИРЫ
-              <p>Не только китайского,<br> но и настоящего местного<br> производства!</p>
-              </li>
+            <p>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+          </li>
+          <li class="presents">СУВЕНИРЫ
+            <p>Не только китайского, но и настоящего местного производства!</p>
+          </li>
         </ul>
       </section>
 
       <section class="hotel-serch">
         <h2 class="interest-title">ЗАИНТЕРЕСОВАЛИСЬ?</h2>
-        <p class="reserch-description">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <form action="https://echo.htmlacademy.ru" target="_blank">
-          <button class="serch">ПОИСК ГОСТИНИЦЫ В СДЕОНЕ</button>
-        </form>
+        <p class="reserch-description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <a class="hotels-button" href="catalog.html">
+        <button class="serch" type="button">ПОИСК ГОСТИНИЦЫ В СДЕОНЕ</button></a>
       </section>
 
       <section class="subscribe">
         <h2>ПОДПИШИТЕСЬ НА РАССЫЛКУ</h2>
-        <p>Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
+        <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="newsletter-form" action="https://echo.htmlacademy.ru" method="post">
-          <label for="newsletter-email">
+          <label class="visually-hidden" for="newsletter-email">
+            Введите Ваш e-mail
           </label>
-          <input type="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email" required>
+          <input placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email" required>
           <button class="newsletter-button" type="submit">Подписаться</button>
         </form>
-        <img src="#" alt="background">
       </section>
     </main>
 
     <footer class="main-footer">
       <section class="footer-sosial">
+        <h1 class="visually-hidden">Социальные сети</h1>
         <ul class="footer-sosial-list">
           <li class="footer-sosial-item">
             <a class="button" href="https://vk.com/htmlacademy">
@@ -141,9 +141,10 @@
       </section>
 
       <section class="contacts">
-      <a class="contacts-phone" href="tel:+7(812)8121212">+7 (812) 812-12-12</a>
+        <h1 class="visually-hidden">Контакты</h1>
+      <a class="contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
       </section>
-      <section class="footer-logo">
+      <section class="visually-hidden footer-logo">
         <span class="visually-hidden">Логотип</span>
         <a href="https://htmlacademy.ru/">HTML-logo</a>
       </section>
