--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header class="main-header">
-    <img src="logo" alt="Логотип Седоны">
+    <img src="images/vector/logo.svg" width="140" height="70" alt="Логотип Седоны.">
     <nav class="navigation">
       <ul class="navigation-list">
         <li class="navigation-item">
@@ -50,6 +50,7 @@
     <main class="main-inner">
         <header class="inner-header">
             <h1 class="inner-header-title">Гостиницы Седоны</h1>
+            <img class="background-picture" src="images/png/catalog-background.png" width="1200" height="476" alt="">
             <ul class="breadcrumbs">
                 <li class="breadcrumbs-item">
                   <span class="visually-hidden"><a class="breadcrumbs-link" href="index.html">Главная</a>
@@ -115,8 +116,8 @@
             </fieldset>
 
             <fieldset class="catalog-price">
-              <p><input type="text" placeholder="От" value="0"/></p>
-              <p><input type="text" placeholder="До" value="9000"/></p>
+              <p><input type="text" placeholder="От" value="0"></p>
+              <p><input type="text" placeholder="До" value="9000"></p>
               <legend class="catalog-filter-price">Стоимость, ₽ </legend>
               <!-- не смогла разобраться с фильтрами до конца -->
 
@@ -145,51 +146,51 @@
             <ul class="product-list">
               <li class="product-card">
                 <a class="product-card-link" href="#">
-                    <img class="product-card-img" crs="#" alt="Amara Resort & Spa">
+                  <img class="product-card-img" src="images/photos/Amara-Resort.jpg" width="300" height="212" alt="Amara Resort & Spa">
                     <h3 class="product-card-item">Amara Resort & Spa</h3>
                 </a>
                 <span class="product-card-price">Гостиница от 4000 ₽</span>
                 <a class="product-card-button button" href="#">Подробнее</a>
                 <button class="button">В Избранное</button>
                 <span class="reiting">Рейтинг 8,5</span>
-                <span class="stars">4</span>
+                <span class=" visually-hidden stars">4х-звездочный отель</span>
                 <!-- не разобралась с рейтингом -->
               </li>
 
               <li class="product-card">
                 <a class="product-card-link" href="#">
-                    <img class="product-card-img" crs="#" alt="Villas at Poco Diablo">
+                  <img class="product-card-img" src="images/photos/Villas-at-Poco-Diablo.jpg" width="300" height="212" alt="Villas at Poco Diablo">
                     <h3 class="product-card-item">Villas at Poco Diablo</h3>
                 </a>
                 <span class="product-card-price">Гостиница от 5000 ₽</span>
                 <a class="product-card-button button" href="#">Подробнее</a>
                 <button class="button">В избранном</button>
                 <span class="reiting">Рейтинг 9,2</span>
-                <span class="stars">4</span>
+                <span class=" visually-hidden stars">4х-звездочный отель</span>
               </li>
 
               <li class="product-card">
                 <a class="product-card-link" href="#">
-                    <img class="product-card-img" crs="#" alt="Desert Quail Inn">
-                    <h3 class="product-card-item">Desert Quail Inn</h3>
+                  <img class="product-card-img" src="images/photos/Desert-Quail.jpg" width="300" height="212" alt="Desert Quail Inn">
+                  <h3 class="product-card-item">Desert Quail Inn</h3>
                 </a>
                 <span class="product-card-price">Гостиница от 2500 ₽</span>
                 <a class="product-card-button button" href="#">Подробнее</a>
                 <button class="button">В избранное</button>
                 <span class="reiting">Рейтинг 6,9</span>
-                <span class="stars">3</span>
+                <span class="visually-hidden stars">3х-звездочный отель</span>
               </li>
 
               <li class="product-card">
                 <a class="product-card-link" href="catalog.html">
-                    <img class="product-card-img" crs="#" alt="GreenTree Inn">
-                    <h3 class="product-card-item">GreenTree Inn</h3>
+                  <img class="product-card-img" src="images/photos/GreenTree-Inn.jpg" width="300" height="212" alt="GreenTree Inn">
+                  <h3 class="product-card-item">GreenTree Inn</h3>
                 </a>
                 <span class="product-card-price">Гостиница от 1500 ₽</span>
                 <a class="product-card-button button" href="#">Подробнее</a>
                 <button class="button">В избранное</button>
                 <span class="reiting">Рейтинг 5</span>
-                <span class="stars">2</span>
+                <span class=" visually-hidden stars">2х-звездочный отель</span>
               </li>
             </ul>
 
