базовая стилизация (не до конца)

--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/styles.css">
     <title class="catalog hotels-catalog">Каталог гостиниц</title>
 </head>
 <body>
@@ -23,6 +24,7 @@
         <ul class="navigation-list navigation-user">
           <li class="navigation-item">
             <a class="navigation-link" href="#">
+                                <img class="serch" src="images/vector/serch.svg" alt="Поиск">
               <span class="visually-hidden">
                 Поиск
               </span>
@@ -31,6 +33,7 @@
           <li class="navigation-item">
             <a class="navigation-link" href="#">
               <span class="visually-hidden">Избранное</span>
+              <img class="favorite" src="images/vector/favorite.svg" alt="В избранном">
               <div class="count-favorites">
                 <span class="count">12</span>
               </div>
@@ -50,7 +53,7 @@
     <main class="main-inner">
         <header class="inner-header">
             <h1 class="inner-header-title">Гостиницы Седоны</h1>
-            <img class="background-picture" src="images/png/catalog-background.png" width="1200" height="476" alt="">
+            <img class="background-picture" src="images/png/catalog-back.png" width="1200" height="476" alt="#">
             <ul class="breadcrumbs">
                 <li class="breadcrumbs-item">
                   <span class="visually-hidden"><a class="breadcrumbs-link" href="index.html">Главная</a>
@@ -230,8 +233,8 @@
         </section>
   </main>
 
-  <footer class="main-footer">
-    <section class="footer-sosial">
+  <footer class="catalog-footer">
+    <section class="footer-sosial-catalog">
       <h1 class="visually-hidden">Социальные сети</h1>
       <ul class="footer-sosial-list">
         <li class="footer-sosial-item">
